--- a/.jsdoc.conf
+++ b/.jsdoc.conf
@@ -23,8 +23,8 @@
     "lenient": true
 },
 "templates": {
-    "systemName": "dashcore",
-    "copyright": "2017-2018 Dash Core Group, Inc.",
+    "systemName": "npccoincore",
+    "copyright": "2017-2018 NPCcoin Core Group, Inc.",
     "navType": "vertical",
     "theme": "journal",
     "linenums": true,
