--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ deploy:
     skip_cleanup: true
     script: npm publish
     on:
-      repo: dashevo/dashcore-lib
+      repo: npccoin/npccoincore-lib
       branch: master
