--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "contributors": [
     {
+      "name": "Estilodevida",
+      "email": "estilodevidanpc@gmail.com"
+    },
+    {
       "name": "Daniel Cousens",
       "email": "bitcoin@dcousens.com"
     },
@@ -104,7 +108,8 @@
     "request": "browser-request"
   },
   "dependencies": {
-    "@npccoin/x11-hash-js": "^1.0.2",
+    "multi-hashing": "^0.0.4",
+    "x11-hash-js": "^1.0.2",
     "bloom-filter": "^0.2.0",
     "bn.js": "=4.11.8",
     "bs58": "=4.0.1",
