--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@npccoin/npccoincore-lib",
+  "name": "npccoincore-lib",
   "version": "0.17.9",
   "description": "A pure and powerful JavaScript NPCcoin library.",
   "author": "NPCcoin Core Group, Inc. <npccoin@gmail.com>",
