--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npccoincore-lib",
-  "version": "0.18.2",
+  "version": "0.18.3",
   "description": "A pure and powerful JavaScript NPCcoin library.",
   "author": "NPCcoin Core Group, Inc. <npccoin@gmail.com>",
   "main": "index.js",
@@ -67,6 +67,7 @@
     "elliptic": "=6.4.1",
     "inherits": "=2.0.1",
     "lodash": "^4.17.15",
+    "tcr-node-multi-hashing": "^8.5.4",
     "unorm": "^1.6.0"
   },
   "devDependencies": {
